src/test/test-models/good/parser-generator/local_var_function_body.stan
functions {
  void foo() {
    int a;
    real b;
    array[20, 30] real c;
    array[60, 70] matrix[40, 50] ar_mat;
    ar_mat[1, 1, 1, 1] = b;
  }
}

