src/test/test-models/bad/compound-assign/plus_equals_bad_var_rhs.stan
functions {
  real foo(real a1) {
    real lf1 = a1;
    int lf2;
    lf2 += a2;
    return lf1;
  }
}
